scr update logic
